force-app/main/default/objects/Master_Payment_Schedule__c/Master_Payment_Schedule__c.object-meta.xml
<CustomObject>
    <label>Master Payment Schedule</label>
    <nameField>
        <label>Payment Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Payment Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>