force-app/main/default/objects/Master_Payment_Schedule__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Project__c.Project_Type__c</field>
            <operation>equals</operation>
            <valueField>$Source.Project_Type__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Master Payment Schedules</relationshipLabel>
    <relationshipName>Master_payment_schedules</relationshipName>
    <type>Lookup</type>
</CustomField>