force-app/main/default/objects/Master_Payment_Schedule__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Plot__c</referenceTo>
    <relationshipLabel>Master Payment Schedules</relationshipLabel>
    <relationshipName>Master_Payment_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>