force-app/main/default/objects/Master_Payment_Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>S_No__c</columns>
    <columns>NAME</columns>
    <columns>Project_Type__c</columns>
    <columns>Project__c</columns>
    <columns>Tower__c</columns>
    <columns>Payment_Percent__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Due_Date__c</columns>
    <columns>Include_Interest__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>